Fix for the expanded product images for larger pictures
All expanded images for a product are now a uniform size. There was an issue with some product images being too large and going "off the screen".

--- a/src/assets/styles/product.css
+++ b/src/assets/styles/product.css
@@ -198,8 +198,7 @@
 }
 
 .overlay-image {
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 40vw;
   object-fit: contain;
 }
 
@@ -215,7 +214,7 @@
 }
 
 .close-button {
-  top: 35px;
+  top: 25px;
   right: 8px;
   border: none;
   font-size: 24px;
